--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Rose:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@600&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -12,4 +13,17 @@
 
 body {
   font-family: "Red Rose", sans-serif;
+}
+
+.container {
+  max-width: 1240px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (max-width: 1239px) {
+  .container {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
